pushing git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 # vendor/
 database/dump.sql*
 database/dump.sql.zip
+handlebars-payload.json
+hyphens-payload.json
+hyphens-complex-payload.json
+handlebars-complex-payload.json
 
 
 # Go workspace file
